# ZPG-computer-graphics

./: .gitignore
cv01/: CMakeLists.txt  cv01.txt  main.cpp
cv01/previousMainVersion/: main.cpp
cv02/: CMakeLists.txt  cv02.txt  main.cpp  tree.txt
cv03/: CMakeLists.txt  ClassDiagram.mermaid  main.cpp  structure.txt  zadani.txt
cv03-5/: CMakeLists.txt  DrawableObject.h  Rotate.cpp  Translate.cpp  Translate.h  structure_project
cv04/: CMakeLists.txt  DrawableObject.cpp  DrawableObject.h  Model.h  PNArrayModel.h  Scene.cpp  Scene.h  Scenes.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Transform.h  TransformChain.h  main.cpp  structure.txt  zadani.txt
cv04_du/: AbstractTransformation.h  CMakeLists.txt  CMakeLists.txt.bak  DrawableObject.cpp  Rotate.h  Scene.h  TransformChain.h  TriangleModel.cpp  debug_log.txt  discord.txt  fix_project.sh  github_repo.txt  plan.txt  structure.txt  zadane.txt
cv04_du/assets/shaders/: common_blocks.glsl  fs_blinn_ubo.glsl  fs_constant_ubo.glsl  fs_lambert_ubo.glsl  fs_phong_ubo.glsl  vs_mvp_normals_ubo.glsl
cv04_du/assets/shaders_basic/: fs_blinn_basic.glsl  fs_constant_basic.glsl  fs_lambert_basic.glsl  fs_phong_basic.glsl  vs_posnorm_basic.glsl
cv04_du/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cv04_du/src/app/: main.cpp
cv04_du/src/core/: DrawableObject.cpp  Model.h
cv04_du/src/gfx/: Camera.cpp  Camera.h  CameraUboBinder.cpp  CameraUboBinder.h  Light.cpp  Light.h  LightUboBinder.cpp  LightUboBinder.h  Material.cpp  Material.h  ShaderProgram.cpp  ShaderProgram.h  ShaderStage.cpp  ShaderStage.h  Technique.cpp  Technique.h  Ubo.cpp  Ubo.h
cv04_du/src/math/: Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  TransformChain.cpp  TransformChain.h  Translate.cpp  Translate.h
cv04_du/src/models/: MeshModel.cpp  MeshModel.h  TriangleModel.cpp  TriangleModel.h
cv04_du/src/scene/: Scene.h  Scenes.h  SpheresScene.cpp  SpheresScene.h
